tests/golden/defaults/loki/loki/10_helm_loki/loki/templates/gateway/ingress-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: loki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: loki
    app.kubernetes.io/version: 3.1.1
    helm.sh/chart: loki-6.12.0
  name: loki-gateway
  namespace: syn-loki
spec:
  rules:
    - host: loki.example.cm
      http:
        paths:
          - backend:
              service:
                name: loki-gateway
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - loki.example.com
      secretName: loki-gateway-tls
