tests/golden/defaults/loki/loki/10_helm_loki/loki/templates/gateway/poddisruptionbudget-gateway.yaml
apiVersion: policy/v1
kind: PodDisruptionBudget
metadata:
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: loki
    app.kubernetes.io/name: loki
    app.kubernetes.io/version: 3.5.5
    helm.sh/chart: loki-6.41.1
  name: loki-gateway
  namespace: syn-loki
spec:
  maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: gateway
      app.kubernetes.io/instance: loki
      app.kubernetes.io/name: loki
