tests/golden/defaults/loki/loki/10_helm_loki/loki/templates/gateway/secret-gateway.yaml
apiVersion: v1
kind: Secret
metadata:
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: loki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: loki
    app.kubernetes.io/version: 3.1.1
    helm.sh/chart: loki-6.12.0
  name: loki-gateway
  namespace: syn-loki
stringData:
  .htpasswd: |
    username:$2a$10$Q7IRU80ojQySqMCjKuCQ0.vzs684uHagMzaIVryY.irKM3zg6UpSm
