tests/golden/defaults/loki/loki/10_helm_loki/loki/templates/gateway/service-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: loki
    app.kubernetes.io/name: loki
    app.kubernetes.io/version: 3.6.5
    helm.sh/chart: loki-6.53.0
    prometheus.io/service-monitor: 'false'
  name: loki-gateway
  namespace: syn-loki
spec:
  ports:
    - name: http-metrics
      port: 80
      protocol: TCP
      targetPort: http-metrics
  selector:
    app.kubernetes.io/component: gateway
    app.kubernetes.io/instance: loki
    app.kubernetes.io/name: loki
  type: ClusterIP
